<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNS_Sample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="main_greeting_1">Hello, </string>
	<string name="main_greeting_2">! What do you want to do today?</string>
    <string name="username">USERNAME:</string>
    <string name="password">PASSWORD:</string>
    <string name="repassword">REPASSWORD:</string>
    
	<string name="gender">GENDER:</string>
	<string name="male">MALE</string>
	<string name="female">FEMALE</string>
	<string name="colon">:</string>
	<string name="cancel">CANCEL</string>
	<string name="proceed">PROCEED</string>
	
    
    <string name="login_submit">SIGN IN</string>
    <string name="login_register">REGISTER</string>
	<string name="login_title">WELCOME</string>
	
	<string name="profile_nickname">NICKNAME:</string>
	<string name="profile_age">AGE:</string>
	<string name="profile_phone">PHONE:</string>
	<string name="profile_membership">MEMBERSHIP:</string>
	<string name="profile_member_free">FREE</string>
	<string name="profile_member_monthly">MONTHLY PAID</string>
	
	<string name="invite_today">TODAY:</string>
	<string name="invite_amount">AMOUNT:</string>
	<string name="invite_time">TIME:</string>
	<string name="invite_hours">HOURS</string>
	<string name="invite_from">FROM:</string>
	<string name="invite_to">TO:</string>
	<string name="invite_location">LOCATION:</string>
	<string name="invite_site">SITE:</string>
	<string name="invite_comment">COMMENT:</string>
	
	<string name="appointment_date">APPOINTMENT DATE:</string>
	<string name="appointment_membership_prompt">MEMBERSHIP;</string>
	<string name="appointment_membership_view_profile">VIEW MEMBERSHIP PROFILE</string>
	<string-array name="membership_arrays">
        <item>@string/profile_member_free</item>
        <item>@string/profile_member_monthly</item>
    </string-array>
    
	<string name="manage_map">MAP</string>
	<string name="manage_customer">CUSTOMERS:</string>
	<string name="manage_schedule">SCHEDULE:</string>
	<string name="manage_schedule_finished">FINISHED</string>
	<string name="manage_schedule_unfinished">UNFINISHED</string>
	<string name="manage_transaction">TRANSACTIONS:</string>
	<string name="manage_work">WORK:</string>
 
</resources>